src/styles.css
html {
  /*background: url('./assets/background.png') no-repeat center center fixed;*/
  background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
  box-sizing: border-box;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  z-index:0;
  /*overflow: hidden;*/
}

h1 {
  text-align: center;
  font-size: 90px;
  font-family: "Comic Sans MS", "Comic Sans", cursive;
  color: white;
  margin-bottom: 0;
  -webkit-text-stroke: 2px black;
}

h2 {
  text-align: center;
  font-size: 40px;
  color: white;
  margin-bottom: 0;
  margin-top: 0;
  padding: 0;
  -webkit-text-stroke: 1px black;
}

#start {
    text-align: center;
    font-size: 30px;
}

#timer{
    color: white;
}


.grid {
  width: 600px;
  height: 400px;
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  /*cursor: url('./assets/mallet.png'), pointer;*/
  margin-top: 50px;
  padding-top: 100px;
}

.hole {
  flex: 1 0 33.33%;
  overflow: hidden;
  position: relative;
}

.hole:after {
  display: block;
  /*background: url("./assets/hole.png") bottom center no-repeat;*/
  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true") bottom center no-repeat;
  background-size:contain;
  content:'';
  width: 100%;
  height: 100%;
  position: absolute;
  bottom: -40%;
  z-index: 2;
  pointer-events:none;
}

.mole {
  /*background:url('./assets/mole.png') bottom center no-repeat;*/
  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
  background-size: 40%;
  position: absolute;
  top: 100%;
  width: 100%;
  height: 100%;
  transition: transform 0.5s;
  transition: all 1s;
  pointer-events:auto;
}

.hole.show .mole {
  top: 0;
  transform: scale(1.1);
}

.gameLength, .difficultyDropdown {
  text-align: center;
  font-size: 40px;
  color: white;
  padding: 5px;
  -webkit-text-stroke: 1px black;
}

.menu {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

@media (min-height: 480px) and (max-height: 800px) {

  html {
  overflow-y: scroll;
  }

  .grid {
    width: 600px;
    height: 400px;
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
    cursor: url('./assets/mallet.png'), pointer;
    
  }
}

